--- a/vgmd/package.json
+++ b/vgmd/package.json
@@ -7,6 +7,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.16.3",
+    "mongoose": "^5.0.15",
     "nodemon": "^1.17.2",
     "react": "^16.2.0",
     "react-dom": "^16.3.0",
