--- a/vgmd/package.json
+++ b/vgmd/package.json
@@ -6,9 +6,13 @@
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "gravatar": "^1.6.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.15",
     "nodemon": "^1.17.2",
+    "passport": "^0.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.3.0",
     "react-hot-loader": "^4.0.0",
