--- a/vgmd/package.json
+++ b/vgmd/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^5.0.15",
     "nodemon": "^1.17.2",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.3.0",
     "react-hot-loader": "^4.0.0",
@@ -20,7 +21,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
-    "reload": "^2.2.2"
+    "reload": "^2.2.2",
+    "validator": "^9.4.1"
   },
   "scripts": {
     "build": "react-scripts build",
