Added more routes for colorScheme and songs

--- a/vgmd/package.json
+++ b/vgmd/package.json
@@ -33,10 +33,13 @@
   },
   "devDependencies": {
     "bootstrap": "^4.0.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "grunt": "^1.0.2",
     "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-watch": "^1.0.0",
     "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1"
+    "less-plugin-clean-css": "^1.5.1",
+    "prettier": "1.12.1",
+    "prettier-eslint": "^8.8.1"
   }
 }
